force-app/main/default/objects/KB_Dimension_Analysis__c/KB_Dimension_Analysis__c.object-meta.xml
<CustomObject>
    <description>One record per individual issue or strength identified by a scorer for a given (article assessment, dimension). Replaces the semicolon-separated text in KB_Dimension_Result__c.Reasoning__c with structured rows so the Action Center and remediation prompts can act on (and reference) each finding individually. Both Issue and Strength records flow through this object — discriminated by Type__c.</description>
    <label>KB Dimension Analysis</label>
    <nameField>
        <displayFormat>DA-{0000000}</displayFormat>
        <label>Dimension Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Dimension Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>