force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Analysis_Text__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Text__c</fullName>
    <description>The single issue or strength sentence emitted by the scorer. This is the source of truth — KB_Dimension_Result__c.Reasoning__c retains a human-readable summary but is no longer parsed by downstream code.</description>
    <label>Analysis Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>