force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Article_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Article_Assessment__c</fullName>
    <description>Denormalized lookup to the article assessment grandparent. Avoids joining through KB_Dimension_Result__c when the Action Center / remediation flow needs to query "all analyses for article X".</description>
    <label>Article Assessment</label>
    <referenceTo>KB_Article_Assessment__c</referenceTo>
    <relationshipLabel>Dimension Analyses</relationshipLabel>
    <relationshipName>Dimension_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>