force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <description>Denormalized dimension DeveloperName (e.g. Completeness, Structure). Same value as the parent KB_Dimension_Result__c.Dimension__c — denormalized so callers can filter by dimension without traversing the master-detail relationship.</description>
    <label>Dimension</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>