force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Dimension_Result__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Result__c</fullName>
    <description>Parent dimension result. Master-detail — analysis rows are cascade-deleted with the parent dimension result.</description>
    <label>Dimension Result</label>
    <referenceTo>KB_Dimension_Result__c</referenceTo>
    <relationshipLabel>Dimension Analyses</relationshipLabel>
    <relationshipName>Dimension_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>