force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>LLM-judged impact of fixing this issue on overall article quality. High = fixing this materially improves the article; Low = nice-to-have. Populated for Issue records on LLM-driven dimensions; null for Strength records and for dimensions whose effort/priority still come from heuristics.</description>
    <inlineHelpText>How much resolving this issue is expected to improve article quality.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>