force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Actionable fix instruction for Issue records. Mirrors the prior KB_Recommendation__c.Recommendation__c content — populated only when Type__c = Issue. Null for Strength records.</description>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>