force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state for Issue records (parity with the prior KB_Recommendation__c.Status__c). Strength records use a default of Open and never transition.</description>
    <inlineHelpText>Open = not yet reviewed. Queued = fix in progress. Resolved = successfully fixed. Error = fix attempt failed. Rejected = acknowledged, won't fix. Dismissed = (deprecated, use Rejected). Strength records remain Open.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>