force-app/main/default/objects/KB_Dimension_Analysis__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Discriminator: Issue (something the scorer flagged as a quality problem) or Strength (something the scorer identified as working well). Strength records are referenced by remediation prompts so the LLM does not regress good content while fixing issues.</description>
    <inlineHelpText>Issue = something to fix. Strength = something to preserve.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
                <default>true</default>
                <label>Issue</label>
            </value>
            <value>
                <fullName>Strength</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>